# research-aggregator-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: SSRN.md  integrate_phase2.md  normalise_phase1.md
integration/: __main__.py  mcp_server_test.py  runner.py  ssrn_connection_test.py  test_arxiv_connection.py  test_mcp_server.py  test_ssrn_connection.py  test_unified_search_integration.py  unified_search_integration_test.py
scripts/: run-http.sh  run-stdio.sh
src/: main.py  mcp_server.py
src/arxiv/: client.py  parser.py
src/common/: __init__.py  paper.py
src/server/: __init__.py  deprecated.py  http_server.py  mcp_server.py  shared.py  stdio_server.py
src/ssrn/: __init__.py  client.py  parser.py
src/util/: logging.py
test/: test_academic_paper.py  test_arxiv.py  test_enhanced_academic_paper.py  test_paper_normalization.py  test_sorting_functionality.py  test_title_aggregation.py  test_unified_search.py
